--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec tsx index.js"
+    "dev": "nodemon --exec tsx index.js",
+    "seed": "tsx seed/seed.ts"
   },
   "type": "module",
   "keywords": [],
